Save/Update files [ci skip]

--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1271,28 +1271,28 @@
  estate_disasters.1.t:0 "$ESTATE_NOBLES$が権力を掌握"
  estate_disasters.1.d:0 "$MONARCH$は、$COUNTRY$の$ESTATE_NOBLES$があまりにも強力に成長することを許し、今や彼らは行動を起こした。彼らに与えられた幅広い特権と権利を行使して、彼らは効果的に政府の統制を奪い、$MONARCHTITLE$を彼らの操り人形同然の存在へと変えてしまった。"
  estate_disasters.1.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.1.a.tt:0 "[Root.GetName]は、§Y「貴族を抑圧」§!の決断を獲得するまで、§Y貴族§!によって支配されるでしょう。"
+ estate_disasters.1.a.tt:0 "[Root.GetName]は、決断§Y「貴族を抑圧する」§!を獲得するまで、§Y貴族§!によって支配されるでしょう。"
  estate_disasters.2.t:1 "抑圧された[Root.GetNobilityOrFallbackName]"
  estate_disasters.2.d:1 "我々は[Root.GetNobilityOrFallbackName]の影響を許容できる水準に制限した。[Root.GetNobilityOrFallbackName]の特権は取り消され、その財産は減少した。[Root.GetNobilityOrFallbackName]自身は、不本意ながら$MONARCHTITLE$がこの国の疑う余地のない指導者であることを受け入れ、[Root.Monarch.GetHerHis]の署名の代わりに、[Root.GetNobilityOrFallbackName]によってかつて使用されていた印は破棄された。"
  estate_disasters.2.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
  estate_disasters.3.t:0 "$ESTATE_CHURCH$が権力を掌握"
  estate_disasters.3.d:0 "$MONARCH$は、$COUNTRY$の$ESTATE_CHURCH$があまりにも強力に成長することを許し、今や彼らは行動を起こした。$ESTATE_CHURCH$は、神との絆に従って一般の人々を保ちながら、政府の統制を奪うために利用できる多くの手段のすべてを利用した。我々の$MONARCHTITLE$は名目上まだ支配者であるが、今や彼らの操り人形同然の存在にすぎない。"
  estate_disasters.3.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.3.a.tt:0 "[Root.GetName]は、§Y「聖職者を抑圧」§!の決断を獲得するまで、§Y聖職者§!によって支配されるでしょう。"
+ estate_disasters.3.a.tt:0 "[Root.GetName]は、決断§Y「聖職者を抑圧する」§!を獲得するまで、§Y聖職者§!によって支配されるでしょう。"
  estate_disasters.4.t:0 "抑圧された[Root.GetChurchOrFallbackName]"
  estate_disasters.4.d:0 "幅広い手段を利用して、$MONARCHTITLE$は、彼らが支配していた多くの官職の[Root.GetChurchOrFallbackName]とその支配下にあった財産を奪い取った。世俗の領土に対する権威は再び$MONARCH$の手にある。"
  estate_disasters.4.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
  estate_disasters.5.t:0 "$ESTATE_BURGHERS$が権力を掌握"
  estate_disasters.5.d:0 "$MONARCH$は、$COUNTRY$の$ESTATE_BURGHERS$があまりにも強力に成長することを許し、今や彼らは行動を起こした。多くの苦労して得た特権と、彼らが貸し付けていた多くの負債を利用し、彼らは効果的に政府の統制を奪い、$MONARCHTITLE$を彼らの操り人形同然の存在へと変えてしまった。"
  estate_disasters.5.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.5.a.tt:0 "[Root.GetName]は、§Y「市民を抑圧」§!の決断を獲得するまで、§Y市民§!によって支配されるでしょう。"
+ estate_disasters.5.a.tt:0 "[Root.GetName]は、決断§Y「市民を抑圧する」§!を獲得するまで、§Y市民§!によって支配されるでしょう。"
  estate_disasters.6.t:0 "抑圧された[Root.GetBurghersOrFallbackName]"
  estate_disasters.6.d:0 "我々は最終的に[Root.GetBurghersOrFallbackName]への依存を断ち切り、国家の重要な機能を再び支配するとともにこれらの商人を都市の城壁内のあるべき場所に戻した。"
  estate_disasters.6.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
  estate_disasters.7.t:0 "$ESTATE_NOMADIC_TRIBES$が権力を掌握"
  estate_disasters.7.d:0 "$MONARCH$は、$COUNTRY$の$ESTATE_NOMADIC_TRIBES$があまりにも強力に成長することを許し、今や彼らは行動を起こした。税の徴収から軍隊の指揮や募集に至るまですべてのことを支配していた彼らの影響力を利用し、彼らは効果的に政権を掌握し、$MONARCHTITLE$を彼らの操り人形同然の存在へと変えてしまった。"
  estate_disasters.7.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.7.a.tt:0 "[Root.GetName]は、§Y「部族を抑圧」§!の決断を獲得するまで、§Y部族§!によって支配されるでしょう。"
+ estate_disasters.7.a.tt:0 "[Root.GetName]は、決断§Y「部族を抑圧する」§!を獲得するまで、§Y部族§!によって支配されるでしょう。"
  estate_disasters.8.t:0 "抑圧された[Root.GetTribesOrFallbackName]"
  estate_disasters.8.d:0 "激しい闘争の後、[Root.GetTribesOrFallbackName]は最終的に再び抑圧された。[Root.Monarch.GetTitle]は、今では再び[Root.Monarch.GetHerselfHimself]を我々の国民の支配者と呼ぶに足る十分な土地、人々、そして制度を支配している。"
  estate_disasters.8.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
@@ -1305,13 +1305,13 @@
  EST_CRUSHED_BURGHERS:0 "市民は抑圧されました"
  EST_CRUSHED_NOMADIC_TRIBES:0 "部族は抑圧されました"
  EST_CRUSHED_CHURCH:0 "聖職者は抑圧されました"
- curtail_estate_noble_title:0 "貴族階級の抑制"
+ curtail_estate_noble_title:0 "貴族を抑圧する"
  curtail_estate_noble_desc:0 "我々の政府は貴族によって運営されている。より集中的な支配を採用することで、権力と特権を縮小する必要があります。"
- curtail_estate_church_title:0 "聖職者を抑圧"
+ curtail_estate_church_title:0 "聖職者を抑圧する"
  curtail_estate_church_desc:0 "我々の国教会は、国家の世俗的な問題に大きな影響を及ぼしている。国家問題への影響を制限するためには、権力と特権を縮小する必要がある。"
- curtail_estate_burghers_title:0 "市民を抑圧"
+ curtail_estate_burghers_title:0 "市民を抑圧する"
  curtail_estate_burghers_desc:0 "都市の市民は贈収賄と汚職によって政府への締め付けを行っている。これらの商人から支配権を奪うためには、権力と特権を縮小する必要があります。"
- curtail_estate_nomadic_tribes_title:0 "部族を抑圧"
+ curtail_estate_nomadic_tribes_title:0 "部族を抑圧する"
  curtail_estate_nomadic_tribes_desc:0 "部族たちは、彼らの操り人形であるハーンを作り上げ、望ましくない法律や伝統を強制している。権力を取り戻すためには、彼らの権力と特権を縮小する必要がある。"
  ESTATES_TITLE:0 "階級"
  ACHIEVEMENTS_FIX_SETTINGS:0 "実績を許可するように設定を変更"
@@ -1407,14 +1407,14 @@
  estate_disasters.12.t:0 "バラモンが権力を掌握"
  estate_disasters.12.d:0 "$MONARCH$は、$COUNTRY$のバラモンがあまりにも強力に成長することを許し、今や彼らは行動を起こした。バラモンは宗教的な結びつきを通じて一般市民を制御しつつ、彼らをバラモンが政治的権力を握るための手段としてあらゆる場面で活用した。我らが$MONARCHTITLE$はもはや操り人形同然であり名目上の統治者に過ぎない。"
  estate_disasters.12.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.12.a.tt:0 "[Root.GetName]は、§Y「バラモンを抑圧」§!の決断を獲得するまで、§Yバラモン§!によって支配されるでしょう。"
+ estate_disasters.12.a.tt:0 "[Root.GetName]は、決断§Y「バラモンを抑圧する」§!を獲得するまで、§Yバラモン§!によって支配されるでしょう。"
  estate_disasters.13.t:0 "抑圧されたバラモン"
  estate_disasters.13.d:0 "幅広い手段を利用して、$MONARCHTITLE$は、彼らが支配していた多くの官職のバラモンとその支配下にあった財産を奪い取った。世俗の領土に対する権威は再び$MONARCH$の手にある。"
  estate_disasters.13.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
  estate_disasters.14.t:0 "ヴァイシャが権力を掌握"
  estate_disasters.14.d:0 "$MONARCH$は、$COUNTRY$のヴァイシャがあまりにも強力に成長することを許し、今や彼らは行動を起こした。多くの苦労して得た特権と、彼らが貸し付けていた多くの負債を利用し、彼らは効果的に政府の統制を奪い、$MONARCHTITLE$を彼らの操り人形同然の存在へと変えてしまった。"
  estate_disasters.14.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.14.a.tt:0 "[Root.GetName]は、§Y「ヴァイシャを抑圧」§!の決断を獲得するまで、§Yヴァイシャ§!によって支配されるでしょう。"
+ estate_disasters.14.a.tt:0 "[Root.GetName]は、決断§Y「ヴァイシャを抑圧する」§!を獲得するまで、§Yヴァイシャ§!によって支配されるでしょう。"
  estate_disasters.15.t:0 "抑圧されたヴァイシャ"
  estate_disasters.15.d:0 "我々は最終的にヴァイシャへの依存を断ち切り、国家の重要な機能を再び支配するとともに商人たるヴァイシャを都市の城壁内のあるべき場所に戻した。"
  estate_disasters.15.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
@@ -1424,18 +1424,18 @@
  estate_disasters.17.t:0 "強力なジャイナ教社会"
  estate_disasters.17.d:0 "$MONARCH$は$COUNTRY$のジャイナがあまりにも強力に成長することを許し、今や彼らは行動を起こした。多くの苦労をして得た特権と、彼らが貸し付けていた多くの負債を利用し、彼らは効率的に政府の統制を奪い、$MONARCHTITLE$を彼らの操り人形同然の存在へと変えてしまった。"
  estate_disasters.17.a:0 "こうなることは分かっていたはずだ…"
- estate_disasters.17.a.tt:0 "[Root.GetName]は、§Y「ジャイナ教徒を抑圧」§!の決断を獲得するまで、§Yジャイナ教徒§!によって支配されるでしょう。"
+ estate_disasters.17.a.tt:0 "[Root.GetName]は、決断§Y「ジャイナ教徒を抑圧する」§!を獲得するまで、§Yジャイナ教徒§!によって支配されるでしょう。"
  estate_disasters.18.t:0 "抑圧されたジャイナ教徒"
  estate_disasters.18.d:0 "我々は最終的にジャイナ教徒への依存を断ち切り、国家の重要な機能を再び支配すると共に、彼らを都市の城壁内のあるべき場所に戻した。"
  estate_disasters.18.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
  EST_CRUSHED_BRAHMINS:0 "バラモンは抑圧されました"
  EST_CRUSHED_VAISYAS:0 "ヴァイシャは抑圧されました"
  EST_CRUSHED_JAINS:0 "ジャイナは抑圧されました"
- curtail_estate_brahmins_title:0 "バラモンを抑圧"
+ curtail_estate_brahmins_title:0 "バラモンを抑圧する"
  curtail_estate_brahmins_desc:0 "バラモンは国家の世俗的な問題に大きな影響を及ぼしている。国家問題への影響を制限するためには、権力と特権を縮小する必要がある。"
- curtail_estate_vaisyas_title:1 "ヴァイシャへの抑圧"
+ curtail_estate_vaisyas_title:1 "ヴァイシャを抑圧する"
  curtail_estate_vaisyas_desc:0 "ヴァイシャは贈収賄と汚職によって政府への締め付けを行っている。これら商人から支配権を奪うためには、権力と特権を縮小する必要があります。"
- curtail_estate_jains_title:0 "ジャイナ教徒を抑圧"
+ curtail_estate_jains_title:0 "ジャイナ教徒を抑圧する"
  curtail_estate_jains_desc:0 "ジャイナ教徒が我が政府を支配している。彼らから支配権を取り戻すため、彼らの権力と特権を縮小する必要がある。"
  ESTATE_NO_EFFECTS_ZERO_INFLUENCE_SHORT:0 "$ESTATE$は影響力が§Y0%§!のため、なにも効果がありません。"
  ESTATE_NO_EFFECTS_ZERO_INFLUENCE:0 "階級の総合的な効果はその影響力と忠誠によって決まります。$ESTATE|Y$は影響力が§Y0%§!のため、なにも効果がありません。"
@@ -1465,7 +1465,7 @@
  desc_armed_cossacks:0 "我々はコサックを武装させ、その多くは現在、連隊に配属される準備が整っている。"
  cossack_estate_events.2.d.tribes:0 "小型船や馬に乗り素早く移動することができるステップのコサックは、非常に巧みな襲撃者である。最近何度もこのような襲撃があり、わが国の田舎だけでなく、国境から結構離れた大都市までもが蹂躙されている。これらの略奪者は急襲を行うと、すぐに彼らがやってきた[cossacks_here_target.GetName]の国境の後ろへと撤収してしまうのだ。$ESTATE_NOMADIC_TRIBES$は被害を受けた地域に権益を持っており、我々に何とかするよう求めている。"
  cossack_estate_events.2.d.fallback:0 "小型船や馬に乗り素早く移動することができるステップのコサックは、非常に巧みな襲撃者である。最近何度もこのような襲撃があり、わが国の田舎だけでなく、国境から結構離れた大都市までもが蹂躙されている。これらの略奪者は急襲を行うと、すぐに彼らがやってきた[cossacks_here_target.GetName]の国境の後ろへと撤収してしまうのだ。被害地の地元当局は現在、我々に何とかするよう求めている。"
- curtail_estate_dhimmi_title:0 "ズィンミーへの抑圧"
+ curtail_estate_dhimmi_title:0 "ズィンミーを抑圧する"
  curtail_estate_dhimmi_desc:0 "ズィンミーが我が政府を支配している。彼らから支配権を取り戻すため、彼らの権力と特権を縮小する必要がある。"
  EST_VAL_DEV:1 "土地占有率: $VAL|Y1$§Y%§!"
  ESTATE_LOYALTY_TOOLTIP_EQUILIBRIUM:0 "\n均衡値は現在$NEUTRAL|Y$§Y%§!で、以下の影響を受けます：\n$DESC$"
@@ -1480,7 +1480,7 @@
  FAVOR_ALLIANCE_BLOCKED_TT:0 "攻撃側戦争の拒否：$VAL|+=2$"
  FAVOR_CURRY_FAVORS_REP_TT:1 "外交評判：$VAL|+=2$"
  FAVOR_CURRY_FAVORS_OPINION_TT:1 "評価：$VAL|+=2$"
- FAVOR_LACK_OF_ALLIANCE_TT:0 "同盟国の不足：$VAL|+=2$"
+ FAVOR_LACK_OF_ALLIANCE_TT:0 "同盟関係の欠如：$VAL|+=2$"
  BUILD_UNIT_ONLY_TRANSPORTS:0 "§R建造できるのは輸送船のみですよ！§!\n"
  estate_pastors:0 "牧師"
  estate_popes:0 "総主教"
