--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1908,8 +1908,8 @@
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_LOYALTY:0 "廃止された農民の権利: §Y$VAL$%§!"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_INFLUENCE:0 "縮小された農民の権利: §Y$VAL$%§!"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_LOYALTY:0 "廃止された農民の権利: §Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_INFLUENCE:0 "保証された農民の権利: §Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_LOYALTY:0 "保証された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_INFLUENCE:0 "保障された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_LOYALTY:0 "保障された農民の権利: §Y$VAL$%§!"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MAJOR_INFLUENCE:0 "付与された農民の特権: §Y$VAL$%§!"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MAJOR_LOYALTY:0 "付与された農民の特権: §Y$VAL$%§!"
  incident_great_peasants_war:0 "農民たちの運命"
@@ -2943,7 +2943,7 @@
  hussite.4.a:0 "神の法を超える者はいない。"
  hussite.4.b:0 "罰は単に象徴的なものとしよう。"
  hussite.5.t:0 "窓外投擲"
- hussite.5.d:0 "フス派の復活以来、窓外投擲は[Root.GetName]における通常のやり方であった。罪人が窓から放り出され、非常に高い場所から下の通りに落ちて死ぬと、群衆が罪人に群がる。それは、退屈な[Root.GetAdjective]の都市生活者にとって人気の光景となっている。"
+ hussite.5.d:0 "フス派の復活以来、窓外投擲は[Root.GetName]における標準的な処刑方法となっている。罪人が窓から放り出され、非常に高い場所から下の通りに落ちて死ぬと、見物のために群衆が罪人に群がる。それは、退屈な[Root.GetAdjective]の都市生活者にとって人気の光景となっている。"
  hussite.5.a:0 "それが[Root.GetAdjective]のやり方だ。"
  hussite.6.t:0 "ウトラキストとターボル派"
  hussite.6.d:0 "フス戦争で勝利したのは穏健派のウトラキストであったが、[Root.GetName]全体でのフス派信仰の復活は、急進的なターボル派を再び浮上させた。彼らは、聖書を除くあらゆる形態の神学的権威を廃止し、可能な限り最大限にカトリックの影響を拒絶しようとしている。ウトラキストの指導者たちは、彼らの増大する影響力を抑えるよう、国家に訴えてきた。"
