--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -35,10 +35,10 @@
  estate_dhimmi_manpower_mod:0 "ズィンミーの徴兵"
  desc_estate_dhimmi_manpower_mod:0 "国はズィンミーの徴兵を増やした。"
  estate_dhimmi_tolerance:0 "宗教的少数派への権利保障"
- estate_dhimmi_guaranteed_autonomy:0 "保証されたズィンミーの自治"
+ estate_dhimmi_guaranteed_autonomy:0 "ズィンミー自治の保障"
  estate_dhimmi_guaranteed_autonomy_effect_tooltip:4 "§Yイスラム教§!ではない領有州はすべて、以下を得ます：\n州の布教強度：§R-100%§!\n州の宗教統一度の貢献値：§G-100%§!"
- estate_dhimmi_guaranteed_autonomy_revoke_effect_tooltip:0 "補正§Y「保証されたズィンミーの自治」§!が、非§Yムスリム§!の全領有州から取り除かれます。"
- estate_dhimmi_guaranteed_autonomy_mod:0 "保証されたズィンミーの自治"
+ estate_dhimmi_guaranteed_autonomy_revoke_effect_tooltip:0 "補正§Y「ズィンミー自治の保障」§!が、非§Yムスリム§!の全領有州から取り除かれます。"
+ estate_dhimmi_guaranteed_autonomy_mod:0 "ズィンミー自治の保障"
  desc_estate_dhimmi_guaranteed_autonomy_mod:0 "国はズィンミーの自治を幅広く保証した。"
  estate_nomadic_tribes_share_of_the_spoils:0 "戦利品の共有"
  estate_nomadic_tribes_chieftains_autonomy:0 "族長の自治の拡大"
@@ -53,10 +53,10 @@
  brahmin_hindu_deity_decision_desc:0 "自分の選択を後悔する人も時にはいるだろう。若かりし頃にどの神に従うか決めたら一生それに縛られるのか？幸運なことに、バラモンの計らいでこの件に関しては限度はあるものの柔軟な取り扱いが可能だ。"
  decision_once_every_ten_years:0 "この決断は§Y10§!年に一回だけ選択できます。"
  estate_brahmins_loyalty_privilege:0 "バラモン議会"
- estate_brahmins_guaranteed_autonomy:0 "保証されたバラモンの自治"
+ estate_brahmins_guaranteed_autonomy:0 "バラモン自治の保障"
  estate_brahmins_guaranteed_autonomy_effect_tooltip:4 "§Yダルマ宗教§!の領有州はすべて、以下を得ます：\n州の布教強度：§R-100§!\n州の宗教統一度：§G-100%§!"
- estate_brahmins_guaranteed_autonomy_revoke_effect_tooltip:0 "補正§Y「保証されたバラモンの自治」§!が、§Yダルマ宗教§!の全領有州から取り除かれます。"
- estate_brahmins_guaranteed_autonomy_mod:0 "保証されたバラモンの自治"
+ estate_brahmins_guaranteed_autonomy_revoke_effect_tooltip:0 "補正§Y「バラモン自治の保障」§!が、§Yダルマ宗教§!の全領有州から取り除かれます。"
+ estate_brahmins_guaranteed_autonomy_mod:0 "バラモン自治の保障"
  desc_estate_brahmins_guaranteed_autonomy_mod:0 "国家はバラモンの自治を幅広く保証した。"
  estate_jains_diplomacy:0 "ジャイナ政権"
  estate_jains_clerical_class:0 "ジャイナ聖職者階級"
@@ -619,7 +619,7 @@
  agenda_colonial_administration:0 "新しい植民地統治"
  desc_agenda_colonial_administration:0 "我々の植民地の1つは限定的な自治が可能な存在へと発展した。これにより、多くの野心的な人々がそこに定住しようとするようになり、我々の財源にも大きな利益をもたらす。"
  agenda_guaranteed_minority_rights:0 "マイノリティの権利保証"
- desc_agenda_guaranteed_minority_rights:0 "最近、この地方のマイノリティの権利が保証されたことで、民衆は安堵のため息をついている。"
+ desc_agenda_guaranteed_minority_rights:0 "最近、この地方のマイノリティの権利が保障されたことで、民衆は安堵のため息をついている。"
  increase_crown_land_share:0 "土地所有権の集権化"
  monopoly_privileges.1.t:0 "織物独占の延長"
  monopoly_privileges.1.d.burghers:0 "我々が[Root.GetBurghersName]に与えた織物の独占は期限切れとなり、これにより我々は織物生産からの収入を回復することが可能となった。しかし、[Root.GetBurghersName]は特権を引き続き維持することを切望しており、独占がさらに10年間保証される見返りに、一時金を支払うことを提案している。"
