--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1393,7 +1393,7 @@
  EVTOPTA5074:0 "市民を召集する。"
  EVTOPTB5074:0 "奨励金を使って大量に召集する。"
  EVTNAME5075:0 "貴族が古い権利を要求"
- EVTDESC5075:1 "貴族は、まだ[Root.Monarch.GetTitle]が多くの貴族の中で最初の一人に過ぎなかった時代を思い出している。彼らは当時に戻ることを望み、[Root.Monarch.GetHerHim]に失われた権利と特権を回復するよう積極的に圧力をかけている。"
+ EVTDESC5075:1 "貴族は、[Root.Monarch.GetTitle]が多くの貴族の中でただの第一人者に過ぎなかった時代を未だに懐古している。彼らは当時への回帰を切望し、[Root.Monarch.GetHerHim]に失われた権利と特権を回復するよう積極的に圧力をかけている。"
  EVTOPTA5075:0 "要求を受け入れよう。"
  EVTOPTB5075:0 "要求を拒否しよう。"
  EVTNAME5076:0 "都市が古い権利を要求"
@@ -1457,7 +1457,7 @@
  EVTOPTA5094:1 "[Root.GetEventAdvisorHerHim]はクビだ！"
  EVTOPTB5094:1 "我々は[Root.GetEventAdvisorHerHim]を信じている。"
  EVTNAME5095:0 "政治家は権力を得る"
- EVTDESC5095:1 "顧問の一人である[Root.Dip_Advisor.GetName]は、[Root.Dip_Advisor.GetHerHis]の地位を昇格させるため、歩みを止めるつもりはないようだ。多かれ少なかれ疑わしい方法を用いることで、[Root.Dip_Advisor.GetSheHe]は[Root.Dip_Advisor.GetHerHis]のあらゆる気紛れに応じると言われている[Root.Monarch.GetTitle]の注目を引くようになっている。"
+ EVTDESC5095:1 "顧問の一人である[Root.Dip_Advisor.GetName]は、[Root.Dip_Advisor.GetHerHis]の地位を高めるためには手段を選ばないようだ。多かれ少なかれ疑わしい方法を用いることで、[Root.Dip_Advisor.GetSheHe]は[Root.Monarch.GetTitle]の注目を引くようになり、[Root.Monarch.GetTitle]は[Root.Dip_Advisor.GetHerHis]のあらゆる気紛れに応じると言われている。"
  EVTOPTA5095:1 "[Root.Dip_Advisor.GetHerHim]はクビだ！"
  EVTOPTB5095:1 "[Root.Dip_Advisor.GetSheHeCap]は素晴らしい仕事をしている。"
  EVTNAME5096:0 "影響を受けた選挙"
