--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1285,7 +1285,7 @@
  coup_in_palace_events.5.d:0 "敵は内にあり、すべてが台無しだ！我々の諜報員たちはもう少しで陰謀者たちを捕えるところでしたが、彼らは我々の目を逃れて不実な計画を進めています。我々は人々に安全を齎さなければなりませんし、さもなくば玉座に座る新たな権力者にとって不都合であるならば人々は殺されてしまうでしょう。早く行動しなければ！"
  coup_in_palace_events.5.a:0 "ああ、希望が潰えた。玉座と我らの信仰とが。"
  coup_in_palace_events.6.t:0 "余波"
- coup_in_palace_events.6.d:1 "陰謀は明るみになり、直近の出来事がその結果を決定づけました。良くも悪くも、結果に関わらず、自国はこれから新しい光を放ちながら前進していくことでしょう。政治と裏取引とは、そういうものですから…"
+ coup_in_palace_events.6.d:1 "陰謀は明るみになり、直近の出来事がその結果を決定づけました。良くも悪くも、その結果に関わらず、自国はこれから新しい光を放ちながら前進していくことでしょう。政治とは、裏取引とは、そういうものですから…"
  coup_in_palace_events.6.a:0 "どうしようか？"
  forbidden_city:0 "紫禁城"
  angkor_wat:0 "アンコール・ワット"
