--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -646,7 +646,7 @@
  estate_church_one_faith_one_culture_gtb:3 "§Y[Root.Culture.GetGroupName]§!文化グループではない、又は§Y受容文化§!ではない領有州はすべて、補正§Y異端文化§!を獲得し、以下の効果を得ます：\n州の不穏度：§R+3.00§!\n文化転向コスト：§G -10.0%§!"
  estate_church_one_faith_one_culture_rta:0 "補正「§Y宗教社会§!」が、州の文化が§Y受容文化§!または§Y[Root.Culture.GetGroupName]§!文化グループで、宗教が§Y[Root.Religion.GetName]§!の全州から取り除かれます。"
  estate_church_one_faith_one_culture_rtb:0 "補正「§Y異端文化§!」が、州の文化が§Y受容文化§!または§Y[Root.Culture.GetGroupName]§!文化グループである州を除く全州から取り除かれます。"
- estate_dhimmi_guarantee_of_traditions:0 "保証された因習"
+ estate_dhimmi_guarantee_of_traditions:0 "保障された因習"
  estate_dhimmi_guarantee_of_traditions_desc:1 "我が[Root.GovernmentName]内の信仰は、いつの時代も上層階級の[Root.Religion.GetName]と下層階級の呪物崇拝が混在している。これら因習を行使する自由を保証し、彼らの信仰に対する政府の干渉を取り消すことで、農村部の樹移民たちの満足度を確保できる。"
  MONOPOLY_INCOME_IVORY_DESC:0 "象牙生産から。"
  MONOPOLY_INCOME_GOLD_DESC:0 "金生産から。"
@@ -723,7 +723,7 @@
  increase_same_religion_opinion_tt:0 "評価補正「§Y同宗教§!」を持つすべての国の[Root.GetName]への評価をさらに§G+25§!"
  remove_increase_same_religion_opinion_tt:0 "外交評価補正「§Y同宗教§!」の追加ボーナスを削除する。"
  INCOME_FROM_WORKSHOPS_DESC:0 "工房と会計所から。"
- unlock_privilege_estate_dhimmi_guarantee_of_traditions_tt:0 "[Root.GetDhimmiName]特権の「§Y保証された宗教的少数派の権利§!」及び「§Y保証されたズィンミーの自治§!」が、特権「§Y保証された因習§!」に置き換わります。"
+ unlock_privilege_estate_dhimmi_guarantee_of_traditions_tt:0 "[Root.GetDhimmiName]特権の「§Y宗教的少数派の権利保障§!」及び「§Yズィンミー自治の保障§!」が、特権「§Y保障された因習§!」に置き換わります。"
  add_increase_opinion_of_fetishists_tt:0 "§Y呪物崇拝§!の全国家は、[Root.GetName]への外交評価が§G+40§!増加する。"
  add_increase_opinion_of_fetishists_when_same_religion_tt:0 "§Y呪物崇拝§!の全国家は、[Root.GetName]も呪物崇拝である限り、[Root.GetName]への外交評価が§G+40§!増加する。"
  add_temporary_colonist_tt:2 "この植民者は、アイデアから植民者を入手しない限り、利用可能です。"
