--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -4350,8 +4350,8 @@
  THEN_NUMBER_OF_REBEL_ARMIES_ARE_LESS_THAN:0 "反乱軍の数が右記未満："
  THEN_NUMBER_OF_REBEL_ARMIES_ARE_MORE_THAN:0 "反乱軍の数が右記以上："
  OR_TRIGGER_STARTS:0 "以下のいずれかが満たされている"
- ADVISOR_HAVE_LOWER_SKILL_THAN:0 "$ADVISORTYPE$の顧問は右記未満の能力を持つ："
- ADVISOR_HAVE_HIGHER_SKILL_THAN:0 "$ADVISORTYPE$の顧問は右記以上の能力を持つ："
+ ADVISOR_HAVE_LOWER_SKILL_THAN:0 "$ADVISORTYPE$顧問のスキルが右記未満："
+ ADVISOR_HAVE_HIGHER_SKILL_THAN:0 "$ADVISORTYPE$顧問のスキルが右記以上："
  NEIGHBOR_COUNTRY_STARTS:0 "隣国"
  TRIGGER_NUM:0 "対象の数"
  TRIGGER_ALLY:0 "いずれかの同盟国"
