--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -91,7 +91,7 @@
  LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL_ECONOMY:0 "§Y$OVERLORD$§!と$COUNTED$の相対的経済力（§Y$AMT$%§!）：$VAL$"
  SIBERIAN_CONSTRUCTION:0 "シベリア開拓地の建設"
  COLONIST_CONSTRUCTION:0 "入植中"
- SPECIFIC_BUILDING_CONSTRUCTION:1 "$BUILDING$建造中"
+ SPECIFIC_BUILDING_CONSTRUCTION:1 "$BUILDING$を建造中"
  CANAL_TYPE_NAME:0 "運河"
  MONUMENT_TYPE_NAME:0 "記念碑"
  GREAT_PROJECT_UPGRADE_CONSTRUCTION_DESC:0 "$NAME|Y$のための$TYPE$をアップグレードは$DATE$に完了します"
@@ -1257,7 +1257,7 @@
  BURN_COLONY:0 "§Y入植地の焼払§!"
  ANNEX_NATION_NO_PROGRESS:0 "併合の進捗を進められなくなりますが、将来状況が変わればまた再開させることができます。（$REASON$）"
  LOAN_REPAYMENT_GENERIC_TARGET:0 "債権者"
- SET_DEFENDER_OF_THE_FAITH_EFFECT:0 "$COUNTRY|Y$は、$RELIGION|Y$信仰の擁護者となった"
+ SET_DEFENDER_OF_THE_FAITH_EFFECT:0 "$COUNTRY|Y$は、$RELIGION|Y$信仰の擁護者になる"
  REMOVE_DEFENDER_OF_THE_FAITH_EFFECT:0 "$COUNTRY|Y$は、もはや$RELIGION|Y$信仰の擁護者ではない"
  BUILD_GREAT_PROJECT_EFFECT:0 "大事業$NAME|Y$を建造する"
  DESTROY_GREAT_PROJECT:0 "大事業$NAME|Y$を破壊する"
