--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -1000,7 +1000,7 @@
  ITA_constantinople_taken:0 "コンスタンティノープル占領"
  desc_ITA_constantinople_taken:0 "東ローマ帝国の都市コンスタンティノープルは占領され、ローマの支配下で繁栄する。"
  ITA_stylize:0 "§Yローマ§!政府の名前を採用しよう。"
- estate_nobles_ITA_military_governors:0 "軍事統治権を付与"
+ estate_nobles_ITA_military_governors:0 "軍事統治権の付与"
  estate_nobles_ITA_military_governors_desc:0 "ローマ帝国の領土を急速に再征服したことで、彼らがあまりにも強力で影響力を持ちすぎてしまうリスクはあるものの、ローマ帝国の統治を一部の将軍に委任することができるようになった。"
  ITA_specify_the_conditional_effects:0 "戦争中、月間自治率変動が§G-0.05§!します。"
  ITA_upgrade_military_governorship_with_abso:0 "階級特権「§Y軍事統治権を付与§!」が強化され、最大絶対主義を§G+5.00§!します。"
@@ -1792,13 +1792,13 @@
  desc_ven_office_of_foreign_commercial_affairs:0 "The office in charge of commercial affairs abroad serves to maintain a high standard with regard to our investments abroad."
  ven_meditteranean_patrols_modifier:0 "地中海巡行"
  desc_ven_meditteranean_patrols_modifier:0 "我々の乗組員は、ガレー船が第二の家となっている熟練者で構成されている。"
- ven_colonial_outpost_modifier:0 "Venetian Colonial Office"
+ ven_colonial_outpost_modifier:0 "ヴェネツィア植民局"
  desc_ven_colonial_outpost_modifier:0 "This province administrates a charter of our trade presence abroad"
  ven_venetian_new_world_charters:0 "ヴェネツィアの新世界勅許"
  desc_ven_venetian_new_world_charters:0 "海外に力を注ぐ必要がある。世界の富と貨幣が我々を待っているのだ…"
  ven_wealth_of_the_new_world_modifier:0 "新世界の富"
  desc_ven_wealth_of_the_new_world_modifier:0 "我々が航海から蓄積した物資や知識は、故郷の人々に大きな恩恵をもたらした。"
- ven_venetian_sugar_modifier:0 "ヴェネツィア砂糖大規模農園"
+ ven_venetian_sugar_modifier:0 "ヴェネツィアの大規模砂糖農園"
  desc_ven_venetian_sugar_modifier:0 "この州には大規模な砂糖大農園があり、その生産性と効率性は地元の行政委員会によって監督されている。"
  ven_global_presence_modifier:0 "国際的存在感"
  desc_ven_global_presence_modifier:0 "世界中の海における我々の存在は、海軍問題において多大な影響力と経験を与えてきた。"
@@ -2004,7 +2004,7 @@
  desc_ned_preparation_of_british_conquest:0 "我々は出航し、国家の名の下にイギリス全土を征服するのだ。"
  ned_conquest_of_england:0 "イングランドの征服"
  desc_ned_conquest_of_england:0 "イングランドは今や我々の支配下にある。"
- ned_man_o_war_modifier:0 "British Subject"
+ ned_man_o_war_modifier:0 "イギリス臣民"
  desc_ned_man_o_war_modifier:0 ""
  ned_the_bock:0 "ボック"
  desc_ned_the_bock:0 "ルクセンブルクのボックは、この地域の安全確保にさらに役立っている。"
@@ -2397,7 +2397,7 @@
  desc_hun_polish_brotherhood:0 "ポーランド人は、幾度となく我々を助けてくれた歴史的な友人だ。互いを兄弟として接する限り、この世界のいかなる力も我々を打ち負かすことはできない。"
  hun_promote_hungarian_culture:0 "ハンガリー文化の振興"
  desc_hun_promote_hungarian_culture:0 "ハンガリーは常に多文化王国であり、もし我々がこの王国を一つに保ちたいと願うのであれば、自国独自の文化を促進し、自国の言葉を国のあらゆる場所で教えるようにしなければならない。"
- hun_guarantee_minority_rights:0 "少数派権利の保証"
+ hun_guarantee_minority_rights:0 "少数派への権利保障"
  desc_hun_guarantee_minority_rights:0 "ハンガリーは常に多文化王国であり、王国を一つに保ちたいのであれば、ハンガリーの統治下にあるすべての国々が同じ権利を享受できるようにしなければならない。"
  hun_fertile_lands:0 "パノニアの肥沃な土地"
  desc_hun_fertile_lands:0 "パノニアの肥沃な土地は、農業と畜産業にとって最適な場所だ。その繁栄と生産性に投資することは、長期的にプラスの効果をもたらすだろう。"
@@ -2571,7 +2571,7 @@
  auh_second_desc:1 "オーストリア＝ハンガリーの国境はますます拡大し、ドイツ、マジャール、およびスラブの地を包み込むまでになった。分離主義を防ぎ、文化の普及を奨励するため、帝国内の全民族に対して平等な待遇を与える政策を制定する。"
  auh_third:0 "産業の中心地"
  auh_third_desc:0 "ボヘミアとシレジアの石炭鉱床、スロバキアの鉱山ことエルツ山地、チロルの金鉱、そしてカルパティア盆地の穀倉地帯に至るまで、自領は、後は加工されるのを待つだけの天然資源に恵まれている。最新の工業技術に投資し、資源の採掘と生産を急がねばならない。"
- auh_fourth:0 "少数派権利の保証"
+ auh_fourth:0 "少数派への権利保障"
  auh_fourth_desc:1 "帝国は伝統的にオーストリアとハンガリーという主要な2文化を優遇してきたが、スラヴやその他の土地を支配するためには、国内に住む最小の少数民族にさえ平等の権利を与える必要がある。"
  auh_fifth:0 "分権化"
  auh_fifth_desc:0 "この広大な多文化国家は、官僚機構にとってしばしば管理しがたいものとなっている。こういった問題を解決するため、分権化を進め、各州にさらに大きな自治権を与えるのだ。"
@@ -3207,7 +3207,7 @@
  desc_INC_integrating_the_borderlands:0 "険しいジャングルの地形は我々にとって慣れたものではない。我々にできることは、国境地帯を統合し、地元の人たちと物々交換することだけである。"
  INC_bowmen_from_the_jungle:0 "弓兵の徴募"
  desc_INC_bowmen_from_the_jungle:0 "ジャングルには、先端に毒がしこまれた矢で身を守る戦士の社会が数多くある。彼らを勧誘できる。"
- INC_secondary_capital_modifier:0 "第二首都"
+ INC_secondary_capital_modifier:0 "副都"
  desc_INC_secondary_capital_modifier:0 "北方への進出を可能にするために、北に第二の首都を作ろう。"
  INC_conscripting_warriors:0 "戦士の徴募"
  desc_INC_conscripting_warriors:0 "軍隊を増強するためにもっと人員が必要だ。血で税金を払わせるのだ！"
@@ -3244,7 +3244,7 @@
  desc_INC_religious_reform:0 "儀式によっては、新しいニーズに合わせて変更する必要がある。"
  INC_mountain_adaptations:0 "高地適応"
  desc_INC_mountain_adaptations:0 "我々は高地での苦難に慣れている。"
- INC_non_inca_modifier:0 "インカの習慣を取り入れる"
+ INC_non_inca_modifier:0 "インカの習慣の採用"
  desc_INC_non_inca_modifier:0 "我々はアンデス山脈の高地に大帝国としての新たなアイデンティティを築こうとしている。"
  INC_gold_debuff:0 "偶像のために金を溶かす"
  desc_INC_gold_debuff:0 "この州からの金収入の一部は宗教的偶像の製造に捧げられてきた。"
@@ -5384,7 +5384,7 @@
  desc_TIM_conflict_with_qara_qoyunlu_over:0 "西アジャムは、黒羊朝との確執に常にさらされてきた。ありがたいことに、今はそれも終わっている。"
  TIM_india_conquest:0 "インド征服"
  desc_TIM_india_conquest:0 "我々は、デリーを拠点とする帝国としてではなく、外来の勝者としてインドを征服することを選んだ。"
- TIM_caucasia_modifier:0 "コーカサス辺境を確保"
+ TIM_caucasia_modifier:0 "コーカサス辺境の確保"
  desc_TIM_caucasia_modifier:0 "自国の西部国境は、ほとんどの人が通過できず、軍隊を進軍させされる者はさらに少ない、北部の高い山脈によって安全に守られています。"
  TIM_fresh_blood_modifier:0 "新鮮な血"
  desc_TIM_fresh_blood_modifier:0 "経験豊富な将軍の死により、軍に空白が生じた。ありがたいことに、我々は新鮮な人材に実力を証明する機会を与えることで、この低迷を好転させることができた。"
@@ -5437,7 +5437,7 @@
  TIM_hegemony_over_the_crescent:0 "三日月地帯をめぐる覇権"
  estate_burghers_TIM_gulf_toll:0 "湾岸通行料の制定"
  estate_burghers_TIM_gulf_toll_desc:0 "ペルシャ湾の貿易に対してより強力な支配を確立するため、通行料を設けるものとする。[Root.GetBurghersName]が切に望む自由貿易には反するが、自国の経済にとっては大きな利益となるだろう。"
- estate_nobles_TIM_appease_the_elites:0 "エリートを宥める"
+ estate_nobles_TIM_appease_the_elites:0 "エリートへの慰撫"
  estate_nobles_TIM_appease_the_elites_desc:0 "テュルク系エリートに広範な特権を与えることで、自軍の専門化はさらに進むだろうが、その代償として彼らに過剰な権力を与えることになるかもしれない。"
  estate_church_TIM_yasa_supremacy:0 "ヤサの優越"
  estate_church_TIM_yasa_supremacy_desc:0 "この国の伝統や社会的規則の多くは、シャリーアではなく、帝国がどのように成り立ったのかに由来するモンゴルのヤサによって統治されている。"
@@ -5445,7 +5445,7 @@
  estate_nobles_TIM_soyurghal_grants_desc:0 "ソユールガールと呼ばれる多数の土地補助金は、国家の財政的独立性を大きく低下させ、テュルク系軍事エリートに高レベルの権限を与えた。"
  estate_nobles_TIM_chagatai_warriors:0 "チャガタイの戦士"
  estate_nobles_TIM_chagatai_warriors_desc:0 "テュルク系戦士の軍事力をさらに強化することは、確かに現状を強化する以外の何ものでもないが、軍事力という点では確かに恩恵を受けている。"
- estate_church_TIM_promote_ijazah:0 "イジャーザを推奨"
+ estate_church_TIM_promote_ijazah:0 "イジャーザの推奨"
  estate_church_TIM_promote_ijazah_desc:0 "聖職者のさらなる拡大を妨げないことを保証することで、知識の普及を確実に続けることができる。"
  TIM_tomb_of_ansari:0 "アンサーリーの墓"
  desc_TIM_tomb_of_ansari:0 "この州には、11世紀の著名なスーフィーであり、非常に尊敬されているヘラートのアブドゥッラー・アンサーリーの墓がある。"
@@ -5843,9 +5843,9 @@
  desc_house_of_worship_upgrade:0 "哲学者、指導者、その他宗教問題に精通した人々がヒンドゥー教とイスラム教の両方に関する宗教問題について話し合うことを奨励するために「礼拝所」が設立された。"
  MUG_decision_viceroyalty_of_the_deccan:0 "デカンの総督職"
  desc_MUG_decision_viceroyalty_of_the_deccan:0 "広大な領域をより効率的に管理するために、南インドの統治を別個の総督に任せた。これにより、他の場所の拡張をより効率的に処理するために、我々の管理を制限から解いた。"
- estate_jains_MUG_gujarati_trade:0 "広範なグジャラートの特権"
+ estate_jains_MUG_gujarati_trade:0 "広範なグジャラート特権"
  estate_jains_MUG_gujarati_trade_desc:0 "グジャラートを拠点とする商人たちにさらなる特権を与えることで、失われたスルタン国の後継者として、カンバート湾における我々の地位を確立することになるだろう。"
- estate_jains_MUG_support_malaccan_viceroyalty:0 "マラッカの総督職を支援"
+ estate_jains_MUG_support_malaccan_viceroyalty:0 "マラッカ総督職への支援"
  estate_jains_MUG_support_malaccan_viceroyalty_desc:0 "マラッカにおける我々の総督府はかなり遠く、そこでの統治は[Root.Capital.GetName]だけでは到底管理できない。我々が提供できるのは、さらなる補助金だけである。"
  estate_rajputs_MUG_rajput_mansabdars:0 "ラージプート・マンサブダール"
  estate_rajputs_MUG_rajput_mansabdars_desc:0 "ラージプートに便宜を図ることで、彼らの忠誠心を獲得し、その軍事力を大いに利用することができるようになる。"
@@ -5975,7 +5975,7 @@
  YUA_NO_CHINA_PROVINCE_HAS_UNREST:0 "§Y中華§!に不穏度が§Y0§!より多い州がない。"
  YUA_FROM_CHINESE_PROVINCES:0 "§Y兵舎§!と§Y裁判所§!の両方がある§Y中華§!の州から。"
  YUA_GRANT_ADM_POWER_PER_COURTHOUSE_MAX_40:0 "所有している§Y裁判所§!ごとに統治力§G5§!を得ます。（最大で統治力§G200§!まで）"
- YUA_UNLOCK_EYES_AND_EARS_OF_THE_EMPEROR:1 "宦官の特権§Y皇帝の耳目§!が解禁されます。忠誠度に応じた以下の効果を得ます。\n年間汚職：§G-0.10§!\n国家不穏度：§G-2.00§!"
+ YUA_UNLOCK_EYES_AND_EARS_OF_THE_EMPEROR:1 "宦官の特権§Y皇帝の目、皇帝の耳§!が解禁されます。忠誠度に応じた以下の効果を得ます。\n年間汚職：§G-0.10§!\n国家不穏度：§G-2.00§!"
  yua_naadam_flag:1 "ナーダム祭典のクールダウン"
  YUA_UNLOCK_FOUR_CLASS_SYSTEM_NOBLES_PRIVILEGE:0 "貴族階級§Y四階級制§!が解禁されます。階級の忠誠度に応じて以下のボーナスが得られます：\n　顧問コスト：§G-15.0%§!\n　[FourClassPrivilege]"
  FourClassPrivilegeEoC:0 "天命成長補正: §G+0.05§!"
@@ -5988,7 +5988,7 @@
  YUA_IF_NO_PRINTING_PRESS:0 "§Y活版印刷§!がまだ発生していない場合："
  YUA_CAPITAL_WILL_GAIN_PRINTING_PRESS_WHEN_INSTITUTION_FIRES:0 "§Y首都§!が§Y活版印刷§!に向けて進捗度§G100%§!を得ます。"
  YUA_UNLOCK_NAADAM_FESTIVAL_DECISION:0 "決断§Yナーダム祭典を開催§!を解禁します。§Y15§!年ごとに以下のボーナスのうち1つを選べます：\n　§Yオプション1§!：§Y5§!年間の騎兵戦闘能力が§G+10.0%§!\n　§Yオプション2§!：威信と正統性が§G+10§!\n　§Yオプション3§!：年間人的資源が§G+0.5§!"
- estate_eunuchs_ears_and_eyes_of_the_emperor_privilege:1 "皇帝の耳目"
+ estate_eunuchs_ears_and_eyes_of_the_emperor_privilege:1 "皇帝の目、皇帝の耳"
  estate_eunuchs_ears_and_eyes_of_the_emperor_privilege_desc:0 "全国各地に秘密警察を配置することで、不審な動きがあった場合の情報を、より簡単に得ることができる。"
  estate_nobles_four_class_system:0 "四階級制"
  estate_nobles_four_class_system_desc:0 "我が帝国の文化は多様であり、効率的に統治するためには文化に応じて適切に分割しなければならない。モンゴル人、色目人、漢人、南人という4つの集団に分けることで、まさにそれを達成することができる。"
@@ -5999,7 +5999,7 @@
  merc_keshig:0 "ケシク"
  yua_four_great_schools_modifier:0 "四大学派"
  desc_yua_four_great_schools_modifier:0 "我が国に医学四大学派がすべて組み込まれたことで、医学の進歩が可能になった。"
- yua_eyes_and_ears_of_the_emperor:0 "皇帝の耳目"
+ yua_eyes_and_ears_of_the_emperor:0 "皇帝の目、皇帝の耳"
  desc_yua_eyes_and_ears_of_the_emperor:0 "全国各地に秘密警察を配置することで、不審な動きがあった場合の情報を、より簡単に得ることができる。"
  yua_simplify_printing_press:0 "印刷機の簡易化"
  desc_yua_simplify_printing_press:0 "印刷機の簡易化によって、多くの人々がこの技術を利用できるようになった。"
