Save/Update files [ci skip]

--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -1469,7 +1469,7 @@
  estate_qizilbash_desc:0 "クズルバシュは、アゼルバイジャン語圏の部族に属するシーア派のトルコ系戦士である。イスラム神秘主義サファヴィー教団によって創設された彼らは、精鋭の歩兵と騎兵であり、貴族に直接対抗する政治力を持つまでに成長した。シーア派武装勢力たるクズルバシュはシーア派の教義を信奉しており、国家による反シーア感情には反対している。"
  estate_qizilbash_ownership:0 "クズルバシュの土地所有権"
  EST_VAL_NO_SHIA_PROVINCES:0 "シーア派の州を領有していない：§Y$VAL$%§!"
- EST_VAL_NO_SHIA_PROVINCES_LOY:1 "シーア派の州を領有していない：§R$VAL$%§!"
+ EST_VAL_NO_SHIA_PROVINCES_LOY:1 "シーア派の州を領有していない：§R$VAL$§!"
  EST_VAL_IS_SHIA:0 "シーア派である：§Y$VAL$%§!"
  EST_VAL_IS_ZOROASTRIAN:0 "ゾロアスター教である：§Y$VAL$%§!"
  EST_VAL_IS_SHIA_LOY:1 "シーア派である：§G$VAL$§!"
@@ -1596,7 +1596,7 @@
  per_traveling_artist:0 "旅行中の芸術家"
  promoting_art_events.7.t:0 "芸術家による追加資材の要求"
  promoting_art_events.7.desc:0 "芸術家の中には、彼らの創作過程がむしろ異常なことがあります。大変残念なことに、雇った芸術家はその種の一人です。彼は私たちの宮廷へ軽やかに現れ、独創性の真の意味をみせつけ、非常に普変わった品物の一覧表を提示してきました。\n通常、このような行動は[Root.GetAdjective]の地下牢への速やかなる収監につながります。しかし、[Root.Monarch.GetTitle]はこの芸術家の作品を見てみたいという忍耐を見せています。"
- promoting_art_events.7.a:0 "彼に願えを叶えよ。"
+ promoting_art_events.7.a:0 "彼の望みを叶えてあげよう。"
  promoting_art_events.7.b:0 "[Root.GetBurghersOrFallbackName]からこれら品物を集めよ。"
  promoting_art_events.7.c:0 "彼のためにこんな品集めてられるか。"
  invite_into_cultural_sphere_of_influence:0 "影響圏への招待"
@@ -1663,7 +1663,7 @@
  send_royal_ambassador_title:0 "王室大使の派遣"
  send_royal_ambassador_tooltip:1 "§Y政府力§!を消費し、対象国の我々への評価を上昇させます。"
  send_royal_ambassador_desc:0 "§Y[Root.GetPersianInfluenceOrAshaVahishta]§!を§R25.00§!消費し、§Y5年間§!§Y[From.GetAdjective]§!から自国への評価を§G+50§!しますか？"
- send_royal_ambassador_tt:1 "この外交行動により、§Yペルシアの影響力§!（§Oムスリムルート§!）または§Yアシャ・ワヒシュタ§!（§Oゾロアスター教ルート§!）を使用し、§Y5年間§!、対象国の自国への評価を§G+50§!増えます。"
+ send_royal_ambassador_tt:1 "この外交行動により、§Yペルシアの影響力§!（§Oムスリムルート§!）または§Yアシャ・ワヒシュタ§!（§Oゾロアスター教ルート§!）を使用し、§Y5年間§!、対象国からの評価が§G+50§!されます。"
  unlock_send_royal_ambassador_tt:0 "外交行動「§Y王室大使の派遣§!」が解禁されます。"
  royal_ambassador_visit:0 "王室大使の訪問"
  FROM_WAS_VISITED_BY_ROYAL_AMBASSADORS_TT:0 "§R- §Y[From.GetName]§!には既に[Root.GetName]の§Y王室大使§!が訪問してます。§!"
@@ -2424,9 +2424,9 @@
  flavor_per.66.desc:0 "ムスリムがザグロス地域を征服して以来、[Root.GetAdjective]人は常にイスラムの芸術、建築、そしてもちろん独自性への傾倒と結びついていきました。しかし、[Root.Religion.GetName]信仰への改宗と共に、自国は祖先であるササン朝の道を歩んでいます。国民は、自身の出自と現在の独自性について双方とも誇りに思っているので、どちらを選んでも大衆が支持しない選択ではありません。"
  flavor_per.66.a:0 "エーラーンシャフルが自国の真名である。もう一度受け入れる時だ。"
  flavor_per.66.b:0 "私たちは[Root.GetAdjective]人だ、そしてそのように記憶されるべきです！"
- flavor_per.67.t:0 "アッバース1世ーペルシア随一の皇帝"
- flavor_per.67.d:0 "アッバース1世、自国で最も偉大な君主の一人である彼は、[GetYear]にペルシア王位に即位したことで注目をあびるようになりました。時間を浪費することなく、国家の問題を宰相や顧問の手に委ねることなく、彼の壮大な改革と宮廷内の階級の影響力削減の計画は、単なる現代で最も啓蒙的な治世の一つの始まりに過ぎませんでした。"
- flavor_per.67.a:0 "王座は彼のものだ！"
+ flavor_per.67.t:0 "アッバース1世 - ペルシア随一の皇帝"
+ flavor_per.67.d:0 "アッバース1世、自国で最も偉大な君主の一人である彼は、[GetYear]年にペルシア王位に即位したことで注目をあびるようになりました。時間を浪費することなく、国家の問題を宰相や顧問の手に委ねることなく、彼の壮大な改革と宮廷内の階級の影響力削減の計画は、単なる現代で最も啓蒙的な治世の一つの始まりに過ぎませんでした。"
+ flavor_per.67.a:0 "玉座は彼のものだ！"
  flavor_per.67.b:0 "現状放棄は決してできないだろう。"
  flavor_per.68.t:0 "アッバース1世のエスファハーン拡張"
  flavor_per.68.d:0 "建築の後援者としてのシャー・アッバースを評価するには、エスファハーンに目を向けねばなりません。アッバースの継承は、1世紀近くにわたってイランの建築界に蔓延っていたお粗末な状況を一変させました。新たなシャーがエスファハーンの拡張を後援した活力によって、建築家たちは、前代の長い低迷の中で滴り落ちた創造性を取り戻しました。適切なことに、新たな発展のバネとなったのは黎明期の$DYNASTY$の建築ではなく、ティムール朝の建築であり、その中でもエスファハーンの記念碑は最高位を誇っています。"
