--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1242,7 +1242,7 @@
  estate_regency_events.5.d:0 "市民階級はお金にしか興味がないと言われている。お金が豊富である限り、彼らは幸せであり、多くの問題を引き起こすことはないと、少なくともそう私たちは考えている。[Root.Monarch.GetName]と[Root.Monarch.GetHerHis]の派閥は、彼らが権力を握っている間、自身の力を使っていくつかの怪しげな商談をさらに前進させた。最も、密輸は私たちにとって目新しいことではなく、加えて私たちはそれを知っていながら目をつぶることも初めてではない。しかしながら今回はこれらの違法な動きが他の国を刺激し、彼らがこの事件の補償を得ることを宣戦布告の口実として利用する可能性がある。そして残念ながら、彼らは交渉する気がない。"
  estate_regency_events.5.a:0 "我々は待つことしかできない"
  estate_regency_events.6.t:0 "不寛容さの勃興"
- estate_regency_events.6.d:1 "あらゆる宗教的権力が常に自身の権力を永続させようとしたり、他宗教に対する支配をもくろんだりもすると言われても、誰も驚かないでしょう。そして、これはまさに[Root.GetName]が直面している状況です。地域の聖職者は自身の力を使って私たちの領地の他の宗教の影響を取り除こうと画策しており、我々は彼らの力の強大さのあまり拒絶しきれていない。臆病な抗議のみが我々が発することのできた主張のすべてだ。将来的にこの方針を変更することは間違いありませんが、今のところ我々はこの方針の中で生きるしかない。"
+ estate_regency_events.6.d:1 "あらゆる宗教的権力が常に自身の権力を永続させようとしたり、他宗教に対する支配をもくろんだりもすると言われても、誰も驚かないだろう。そして、これはまさに[Root.GetName]が直面している状況そのものだ。地域の聖職者は自身の力を使って我々の領地から他宗教の影響を取り除こうと画策しており、その強力さ故に我々は拒絶しきれていない。弱々しい抗議、我々ができたのはそれくらい。将来的にこの方針を変更することは間違いないが、今のところ我々はこの方針の中で生きるしかない。"
  estate_regency_events.6.a:0 "一度に一つの問題"
  religious_intolerance_mod:0 "宗教上での不寛容"
  desc_religious_intolerance_mod:0 "国教に従わない者に対する不寛容の新しい波が始まった。"
