--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -407,13 +407,13 @@
  mesoamerican_reform_4_desc:0 "組織の乱れた部族がメソアメリカの郊外のジャングルと高原を支配している。これらの地域に新しい居留地を建設し、これらの人々を我々の帝国に吸収させよう。"
  mesoamerican_reform_5:0 "官僚機構の改革"
  mesoamerican_reform_5_desc:0 "我々の帝国が許容可能な速度で成長するためには、新たに征服された地域で行政上の決断を迅速に行う権限を持つ、新しい専門の行政官の階級を創設しなければならない。"
- religious_reforms.1.t:0 "改革の承認"
+ religious_reforms.1.t:0 "改革の実行"
  religious_reforms.1.d:0 "我々の社会改革にはその対価がある。我々の国家の中核地域は我々の支配に忠実であるが、他のアルテペトルの多くは、この変化を我慢できないものと考えており、我々との絆を壊すためにこの機会を利用している。"
  religious_reforms.1.a:0 "彼らはこれを後悔するだろう。"
- religious_reforms.2.t:0 "改革の承認"
+ religious_reforms.2.t:0 "改革の実行"
  religious_reforms.2.d:0 "最近の改革の実施が成功したことで、取り残されていると感じる貴族たちと田舎のワカ崇拝者たちの両者に苦痛が生じた。彼らは、我々が、我々と彼らの祖先の古代の慣習を放棄していると感じており、この発展が彼らの権力と影響力を低下させることを恐れている。\nこれらの反対派は、現在、有力なパナカの血統の一人と協力し、彼ら自身の候補者を王位に就かせようとしている。"
  religious_reforms.2.a:0 "彼らはこれを後悔するだろう。"
- religious_reforms.3.t:0 "改革の承認"
+ religious_reforms.3.t:0 "改革の実行"
  religious_reforms.3.d:0 "我々の社会を改革することは、我々の国家を大きく強化するものであるが、我々の支配下にある都市国家間の緊張を作り出した。その結果、最も忠実な地域を除くすべての地域が、中央政府との関係を断絶した。"
  religious_reforms.3.a:0 "彼らはこれを後悔するだろう。"
  maya_religion_events.1.t:0 "神々を養う"
