Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -36,7 +36,7 @@
  LEDGER_NT:0 "伝統"
  DEV_MAKE_STATE:0 "$VAL|Y$¤1で"
  PROV_MAKE_STATE:0 " $COLOR$$PROV$/$SIZE$¤2§!"
- MAKE_STATE_TOO_MANY:0 "さらに$AMOUNT|Y$のテリトリーも…"
+ MAKE_STATE_TOO_MANY:0 "他$AMOUNT|Y$テリトリー…"
  REGCAT_normal:0 "正規兵"
  REGCAT_mercenary:0 "傭兵"
  REGCAT_banner:0 "八旗"
@@ -2000,7 +2000,7 @@
  MIGRATION_COOLDOWN:0 "移住のクールダウン"
  CLICK_TO_SELECT_UNIT:0 "このユニットを選択するにはここをクリック"
  EMBARKED_UNITS:0 "この輸送船には$REGIMENTS$連隊が積み込まれ、合計$UNITS$のユニットが含まれています。"
- EMBARKED_UNITS_FREE_SLOTS:0 "この輸送船は$VAL|Y$のより多くの連隊を収容できます。"
+ EMBARKED_UNITS_FREE_SLOTS:0 "この輸送船は$VAL|Y$個以上の連隊を収容できます。"
  CV_INCOMES_TOTAL:0 "総収入："
  CV_EXPENSES_TOTAL:0 "総支出："
  CV_BALANCE:0 "収支：$VAL$"
@@ -3381,8 +3381,8 @@
  TIME_MONTHS:0 "$MONTHS|Y$ヶ月かかるでしょう。"
  TIME_YEARS:0 "$YEARS|Y$年かかるでしょう。"
  THEY_DESIRE:0 "要求する州は"
- AND_MORE:0 "その他$VAL$"
- AND_MORE_LOWERCASE:0 "その他$VAL$"
+ AND_MORE:0 "他$VAL$…"
+ AND_MORE_LOWERCASE:0 "他$VAL$…"
  DISABLED_ALERTS:0 "警告を無効化"
  local_concessions:0 "地方への譲歩"
  desc_local_concessions:0 "州をなだめるため、税金や徴収率の引き下げが行われている。"
@@ -3446,8 +3446,8 @@
  MACRO_EMPTY_CATEGORY:0 "現在このカテゴリで建設できるものはありません。"
  MACRO_ARMY_FORCE_LIMIT:0 "陸軍扶養限界 $VAL$"
  MACRO_NAVAL_FORCE_LIMIT:0 "海軍扶養限界 $VAL$"
- MACRO_LAND_UNIT_PRODUCTION:0 "生産により：$VAL$（$INF$£infantry_icon_small£ / $CAV$£cavalry_icon_small£ / $ART$£artillery_icon_small£）"
- MACRO_NAVAL_UNIT_PRODUCTION:0 "生産により：$VAL$（$HEAVY$£big_ship_icon_small£ / $LIGHT$£light_ship_icon_small£ / $GALLEY$£galley_icon_small£ / $TRANSPORT$ £transport_icon_small£）"
+ MACRO_LAND_UNIT_PRODUCTION:0 "生産中の陸軍：$VAL$（$INF$£infantry_icon_small£ / $CAV$£cavalry_icon_small£ / $ART$£artillery_icon_small£）"
+ MACRO_NAVAL_UNIT_PRODUCTION:0 "生産中の海軍：$VAL$（$HEAVY$£big_ship_icon_small£ / $LIGHT$£light_ship_icon_small£ / $GALLEY$£galley_icon_small£ / $TRANSPORT$ £transport_icon_small£）"
  MACRO_NOT_CONTROLLER:0 "$LAND$は$PROVINCE$を支配していません。"
  MACRO_NOT_OWNER:0 "$LAND$は$PROVINCE$を領有していません。"
  MACRO_NOT_OWNER_OR_SUBJ_OWNER:0 "$LAND$やその従属国は$PROVINCE$を領有していません。"
@@ -4991,7 +4991,7 @@
  alert_max_monarch_power_reached_1_delayed:0 "§Y$POW1$君主力§!が最大値に達しています。"
  alert_max_monarch_power_reached_2_delayed:0 "$POW1|Y$君主力と§Y$POW2$君主力§!が最大値に達しています。"
  alert_max_monarch_power_reached_3_delayed:0 "$POW1|Y$君主力、$POW2|Y$君主力と§Y$POW3$君主力§!が最大値に達しています。"
- AND_X_PROV_MORE:0 "そして、さらに$VAL|Y$州において…"
+ AND_X_PROV_MORE:0 "他$VAL|Y$州…"
  PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§Rこの行動を取るには少なくとも$COST|Y0$¤の教皇資金が必要です。§!"
  PAPAL_CURIA_TREASURY_COST:0 "教皇資金から$COST|Y0$¤が必要。\n"
  WHEN_CONQUERED:0 "\nこれはこの州を征服したときに中核化するのにかかるおおよそのコストです：\n"
