--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -620,7 +620,7 @@
  NEW_ACHIEVEMENT_60_DESC:0 "教皇領か皇帝のどちらかとなり、帝国の公式な信仰をカトリックとしたうえで教皇領を選帝侯にする。"
  NEW_ACHIEVEMENT_48_DESC:0 "任意の覇権国として100%の力に到達する。"
  NEW_ACHIEVEMENT_61_NAME:0 "ワンダフル"
- NEW_ACHIEVEMENT_61_DESC:0 "レベル3の異なる遺産を8つ所有する。"
+ NEW_ACHIEVEMENT_61_DESC:0 "レベル3の異なる大事業を8つ所有する。"
  NEW_ACHIEVEMENT_62_NAME:0 "スパイス・ガールズ"
  NEW_ACHIEVEMENT_62_DESC:0 "女性君主であり、クローブ、香辛料、塩、砂糖の交易ボーナスを獲得している。"
  NEW_ACHIEVEMENT_64_NAME:0 "ボネの髄まで"
