--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -450,8 +450,8 @@
  ESTATE_AGENDA_TASK_COMPLETED:4 "完了した場合の影響：\n$EFFECT$\n\n"
  ESTATE_AGENDA_FAILING_EFFECT:2 "失敗した場合の影響：\n$EFFECT$\n\n"
  DECIDE_ON_ESTATE_AGENDA:1 "議題$NAME|Y$を決定"
- HAS_NOT_ESTATE_PRIVILEGE:1 "$PRIVILEGE|Y$の階級特権を与えていない\n"
- HAS_ESTATE_PRIVILEGE:1 "$PRIVILEGE|Y$の階級特権を与えた\n"
+ HAS_NOT_ESTATE_PRIVILEGE:1 "階級特権$PRIVILEGE|Y$を与えていない\n"
+ HAS_ESTATE_PRIVILEGE:1 "階級特権$PRIVILEGE|Y$を与えた\n"
  FORCE_CONVERTED_BY:0 "$CONVERTED_BY|Y$に改宗を強制された"
  NOT_FORCE_CONVERTED_BY:0 "$CONVERTED_BY|Y$に改宗を強制されていない"
  CROWN_LAND_SHARE_LESS_THAN:1 "直轄地が$SHARE|Y$%未満\n"
