--- a/source/localisation/USA_dlc_l_english.yml
+++ b/source/localisation/USA_dlc_l_english.yml
@@ -15,7 +15,7 @@
  usa_dlc.EVTDESC4:0 "合衆国を主権国家の連合体として成立させた13州は連合規約の条文の解釈を承認し、また各州に規約の批准を行うよう使者を送った。これによってアメリカ独立戦争を指導し、ヨーロッパ諸国との外交を処理し、また批准されたわけではないとはいえ領土問題とインディアンとの関係をも扱うという、これらの行為について大陸会議に国内的にも国際的にも正統性を与えることとなった。草案が作られる間には多くの問題について長い議論が行われた。主権について、連邦政府に与えられる適正な権限について、司法権を持つべきか、投票手続きについてなどである。"
  usa_dlc.EVTOPTA4:0 "規約を批准する"
  usa_dlc.EVTNAME5:0 "アメリカ独立宣言"
- usa_dlc.EVTDESC5:0 "トマス・ペインはイングランド系アメリカ人の政治活動家、著作家、政治理論家であり、独立派たちにイギリスからの独立を宣言するよう示唆した革命家である。彼は『コモンセンス』の初版のなかでアメリカ合衆国には公式のアメリカ独立宣言が必要であると主張した。独立宣言なしでは、合衆国はヨーロッパ諸国から無法者と思われているうえに正当な君主に逆らう大逆者となっており、合衆国は自分たちの大義への国際的承認と支援する同盟国とを必要とする正当な国家に自国を変容させなければならない。独立宣言は13州が自分たちは独立国家であり、もはやイギリス帝国の一部ではないと告げる声明文である。"
+ usa_dlc.EVTDESC5:0 "トマス・ペインはイングランド系アメリカ人の政治活動家、著作家、政治理論家であり、独立派たちにイギリスからの独立を宣言するよう示唆した革命家である。彼は『コモンセンス』の初版のなかで、アメリカ合衆国には公式のアメリカ独立宣言が必要であると主張した。独立宣言なしでは、合衆国はヨーロッパ諸国から無法者、正当な君主に逆らう大逆者とみなされてしまう。そこで合法的な国家に変えるためには、合衆国は自分たちの大義に対する国際的承認と、それを支持する同盟国が必要なのだ。独立宣言は、13州が自らを独立国家であるとみなし、もはやイギリス帝国の一部ではないことを表明する声明文である。"
  usa_dlc.EVTOPTA5:0 "独立宣言に署名する"
  usa_dlc.EVTNAME6:0 "アメリカ独立"
  usa_dlc.EVTDESC6:0 "アメリカ13州は合衆国独立宣言に署名することによって大英帝国からの独立を宣言した。これは13州を正当な国家に変え、支援と彼らの理念の同調者を得るのに必要な国際的承認をアメリカに与えるために行われた。我が国はこの新たな国家を正式に承認し独立宣言を受け入れるべきだろうか？承認すればグレートブリテンの怒りを買う可能性はあるが、一方で若い一国家から感謝されるだろう。"
