--- a/source/localisation/watersnake_1_37_l_english.yml
+++ b/source/localisation/watersnake_1_37_l_english.yml
@@ -3,5 +3,5 @@
  OL_GREATPROJECT_CONSTRUCTION:0 "$PROV$で$BUILDING$を建設しており、$DATE$に完了予定です。"
  EDICT_ALREADY_SELECTED:0 "この布告は既に有効です。"
  EDICT_EFFECT_REMOVED:0 "§R$EDICT$が廃止されたとき：§!$EFFECT$"
- FREE_CULTURES_DESC:0 "無料で登用される文化："
+ FREE_CULTURES_DESC:0 "無料の登用文化："
  FREELY_ACCEPTED_CULTURE_DESC:0 "この文化が受容されると、追加の文化の登用スロットを得ます。"
